# qformats-example-app

./: .gitignore  .gitmodules  CMakeLists.txt
data/maps/: dungeon.map  qstart.map
src/: QuakeMap.cpp  QuakeMap.h  Scene.cpp  Scene.h  main.cpp  rlights.h
